@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.1021 2009-03-28 19:26:47 castaglia Exp $
+$Id: NEWS,v 1.1022 2009-03-29 00:51:58 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -96,6 +96,9 @@ CVS
 - Bug 3043 - SQLGroupInfo should allow custom queries.  See the SQLGroupInfo
   description for more information.
 - Bug 2178 - Extend TLSRequired for <Directory> and .ftpaccess contexts.
+- Bug 3209 - mod_wrap2 should support the 'spawn' feature (or equivalent) of
+  tcpwrappers.  Using mod_wrap/mod_wrap2 in conjunction with the mod_exec
+  module, this is now possible.
 
 1.3.2 - Released 5-Feb-2009
 --------------------------------
